[gd_scene load_steps=4 format=4 uid="uid://dyrv5jg4hiu2l"]

[ext_resource type="Script" uid="uid://rmtje3h4tmnc" path="res://Prefab/TowerDefense/Projectile/TowerDefenseProjectile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c1jocs3s84m21" path="res://Asset/Texture/Character/Effect/Shadow.png" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vcl4b"]
radius = 15.0

[node name="TowerDefenseProjectile" type="Node2D"]
physics_interpolation_mode = 1
z_index = -6
script = ExtResource("1")
itemLayer = 9

[node name="ProjectileBodyNode" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ShadowSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
z_index = -10
texture = ExtResource("2")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
process_mode = 4
light_mask = 0
position = Vector2(0, -77)
collision_layer = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_vcl4b")

[connection signal="land" from="." to="." method="Land"]
[connection signal="area_entered" from="HitBox" to="." method="HitCheck"]
